--- a/airbyte-integrations/connectors/source-welkin-health/source_welkin_health/spec.yaml
+++ b/airbyte-integrations/connectors/source-welkin-health/source_welkin_health/spec.yaml
@@ -1,12 +1,47 @@
-documentationUrl: https://docsurl.com
+documentationUrl: https://docs.airbyte.com/integrations/sources/welkin-health
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
-  title: Welkin Health Spec
+  title: Source Welkin Health Spec
   type: object
   required:
-    - TODO
+    - tenant_name
+    - instance_name
+    - client_name
+    - client_secret
+    - start_date
   properties:
-    # 'TODO: This schema defines the configuration required for the source. This usually involves metadata such as database and/or authentication information.':
-    TODO:
+    tenant_name:
+      title: Tenant (Organization)
       type: string
-      description: describe me
+      description: "Your tenant name, which is basically the name of your organization in Welkin"
+      examples:
+        - "gh"
+      airbyte_secret: false
+    instance_name:
+      title: Instance (Environment)
+      type: string
+      description: "Your instance name, the name of your environment in Welkin"
+      examples:
+        - "sb-demo"
+      airbyte_secret: false
+    client_name:
+      title: Client Name
+      type: string
+      description: "The API Client you created in Welkin admin page"
+      examples:
+        - "VBOPNRYRWJIP"
+      airbyte_secret: false
+    client_secret:
+      title: Client Secret Key
+      type: string
+      description: "The secret key associated to your API client"
+      examples:
+        - "+}B{KGTG6#zG%P;tQm0C"
+      airbyte_secret: true
+    start_date:
+      title: Start Date
+      type: string
+      description: "The date from which you'd like to replicate data for Welkin Health API, in the format YYYY-MM-DDT00:00:00Z. All data generated after this date will be replicated."
+      examples: 
+        - "2021-08-10T13:32:02.528Z"
+      pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}.[0-9]{3}Z$"
