--- a/airbyte-integrations/connectors/source-athena-health/source_athena_health/spec.yaml
+++ b/airbyte-integrations/connectors/source-athena-health/source_athena_health/spec.yaml
@@ -1,12 +1,23 @@
-documentationUrl: https://docsurl.com
+documentationUrl: https://docs.airbyte.com/integrations/sources/athena-health
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
-  title: Athena Health Spec
+  title: Source Athena Health Spec
   type: object
   required:
-    - TODO
+    - client_id
+    - client_secret
   properties:
-    # 'TODO: This schema defines the configuration required for the source. This usually involves metadata such as database and/or authentication information.':
-    TODO:
+    client_id:
+      title: Client Id
       type: string
-      description: describe me
+      description: "The Client ID you created in Athena's developer portal"
+      examples:
+        - "0oagvyeuwlGRTnW6K297"
+      airbyte_secret: false
+    client_secret:
+      title: Client Secret Key
+      type: string
+      description: "The secret key associated to your Client ID"
+      examples:
+        - "hLcC7l8CDPzXI8BhHY0pygbC2SgE4XRBoIXtqgW3"
+      airbyte_secret: true
